@@ -36,6 +36,10 @@ my %modules = (
 	'File::Slurp' => {
 		expl => 'File::Slurp gets file encodings all wrong, line endings on win32 are messed up, and it was written before layers were properly added. Use File::Slurp::Tiny, File::Slurper, Path::Tiny, Data::Munge, or Mojo::Util.',
 	},
+	'Getopt::Std' => {
+		expl => 'Getopt::Std was the original very simplistic command-line option processing module. It is now obsoleted by the much more complete solution Getopt::Long, which also supports short options. See also Getopt::Long::Descriptive.',
+		severity => $SEVERITY_MEDIUM,
+	},
 	'HTML::Template' => {
 		expl => 'HTML::Template is an old and buggy module, try Template Toolkit, HTML::Zoom, or Text::Template instead, or HTML::Template::Pro if you must use the same syntax.',
 	},
@@ -142,6 +146,12 @@ L<File::Slurp> gets file encodings all wrong, line endings on win32 are messed
 up, and it was written before layers were properly added. Use
 L<File::Slurp::Tiny>, L<File::Slurper>, L<Path::Tiny/"slurp">,
 L<Data::Munge/"slurp">, or L<Mojo::Util/"slurp">.
+
+=head2 Getopt::Std
+
+L<Getopt::Std> was the original very simplistic command-line option processing
+module. It is now obsoleted by the much more complete solution L<Getopt::Long>,
+which also supports short options. See also L<Getopt::Long::Descriptive>.
 
 =head2 HTML::Template
 
