@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - add Getopt::Std to discouraged modules
 
 0.010     2015-08-28 17:11:40 EDT
   - Fix Changes
